change the magazine togallery, where will have gallery with avatar icon

--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@
             <div class="landing-nav-subcontainer">
                 <a href="#" title="mizik ki soti nan denye mwa yo">new</a>
                 <a href="buymusic.html" title="itunes , amazon , google mizik">ht mizik</a>
-                <a href="#" title="tcket , kompaevents , wiki mizik">magazine</a>
+                <a href="#" title="tcket , kompaevents , wiki mizik">gallery</a>
                 <a href="#">info</a>
                 <a href="login.html">login</a>
                 <a href="support.html">sipò ou</a>
