--- a/bio.html
+++ b/bio.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>HMIBIO</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Materialize+Icons">
     <link rel="stylesheet" href="assets/lib/materialize/css/materialize.min.css" />
     <link rel="stylesheet" href="css/index.css">
 
@@ -44,7 +45,7 @@
                 <a href="#" title="mizik ki soti nan denye mwa yo">new</a>
                 <a href="buymusic.html" title="itunes , amazon , google mizik">buy it now</a>
                 <a href="gallery.html" title="tcket , kompaevents , wiki mizik">gallery</a>
-                <a href="#">info</a>
+                <a href="blog.html">blog</a>
                 <a href="login.html">login</a>
                 <a href="support.html">donate</a>
                 <div class="landing">
