--- a/bio.html
+++ b/bio.html
@@ -15,41 +15,46 @@
 <body>
     <header class="header-page">
         <div class="social-contact">
-            <div class="">
-                <a href="http://www.youtube.com/hmibio">
-                    <img src="img/social/youtube.png" alt="">
+            <span class="open-slide hide-on-extra-large-only">
+                <a onclick="openSlideMenu()">
+                    <svg width="30" height="30">
+                        <path d="M0,5 30,5" stroke="#fff" stroke-width="5" />
+                        <path d="M0,14 30,14" stroke="#fff" stroke-width="5" />
+                        <path d="M0,23 30,23" stroke="#fff" stroke-width="5" />
+                    </svg>
                 </a>
-                <a href="http://www.instagram.com/hmibio">
-                    <img src="img/social/insta-icon.jpeg" alt="">
-                </a>
-                <a href="http://www.facebook.com/hmibio">
-                    <img src="img/social/fb.png" alt="">
-                </a>
-                <a href="http://www.twitter.com/hmibio">
-                    <img src="img/social/twitter-icon.png" alt="">
-                </a>
-                <a href="http://www.facebook.com/hmibio">
-                    <img src="img/icon/add-user.png" alt="">
-                </a>
-                <a href="http://www.twitter.com/hmibio">
-                    <img src="img/icon/music.png" alt="">
-                </a>
-                <a href="http://www.instagram.com/hmibio">
-                    <img src="img/icon/info-blog.png" alt="">
-                </a>
-            </div>
+            </span>
+            <a href="http://www.youtube.com/hmibio">
+                <img src="img/social/youtube.png" alt="">
+            </a>
+            <a href="http://www.instagram.com/hmibio">
+                <img src="img/social/insta-icon.jpeg" alt="">
+            </a>
+            <a href="http://www.facebook.com/hmibio">
+                <img src="img/social/fb.png" alt="">
+            </a>
+            <a href="http://www.twitter.com/hmibio">
+                <img src="img/social/twitter-icon.png" alt="">
+            </a>
+            <a href="login.html">
+                <img src="img/add-user.png" alt="">
+            </a>
+            <a href="http://www.twitter.com/hmibio">
+                <img src="img/icon/music.png" alt="">
+            </a>
         </div>
-        <hr />
+        </div>
+        <hr class="hide-on-large-only" />
         <div class="landing-nav">
             <div class="landing-nav-subcontainer">
-                <a href="#" title="mizik ki soti nan denye mwa yo">new</a>
-                <a href="buymusic.html" title="itunes , amazon , google mizik">buy it now</a>
+                <a href="index.html">home</a>
                 <a href="gallery.html" title="tcket , kompaevents , wiki mizik">gallery</a>
                 <a href="blog.html">blog</a>
-                <a href="login.html">login</a>
+                <a href="#" title="mizik ki soti nan denye mwa yo">new</a>
+                <a href="buymusic.html" title="itunes , amazon , google mizik">buy it now</a>
                 <a href="support.html">donate</a>
                 <div class="landing">
-                    Haitian Music Industry Biography
+                    Haitian Media Industry Biography
                 </div>
             </div>
         </div>
@@ -64,52 +69,15 @@
                 </form>
             </div>
         </nav>
-        <!-- <form name="myForm">
-                <datalist id="selectedImages">
-                    <option value="sanders">sanders solon</option>
-                    <option value="martelly">michel joseph martelly </option>
-                    <option value="nickenson"> nickenson prud'homme</option>
-                    <option value="pouchon">pouchon</option>
-                    <option value="frero">frero</option>
-                    <option value="cange">reginald cange</option>
-                    <option value="izolan">izolan</option>
-                    <option value="brutus">brutus</option>
-                    <option value="eud">Princess Eud</option>
-                    <option value="tjoe">tjoe</option>
-                    <option value="ritchie"> ritchie </option>
-                    <option value="shabba">shabba</option>
-                    <option value="jperry">jperry</option>
-                    <option value="michaelguirand">Michael Guirand</option>
-                    <option value="alan cave">alan cave </option>
-                    <option value="roberto">robert martino</option>
-                    <option value="robert martino">roberto martino</option>
-                    <option value="king kino">king kino</option>
-                    <option value="pipo">pipo stanis</option>
-                    <option value="kenny">kenny</option>
-                    <option value="oli">oli duret</option>
-                    <option value="wid">wid</option>
-                    <option value="wanito">wanito</option>
-                    <option value="fantom">fantom</option>
-                    <option value="pikan">pikan</option>
-                    <option value="dog-g">dog g</option>
-                    <option value="arly">Arly Lariviere</option>
-                    <option value="jude jean">jude jean</option>
-                    <option value="dadou pasket">dadoo pasket</option>
-                    <option value="shooboo">shooboo tabou</option>
-                    <option value="gracia delva">gracia delva</option>
-                    <option value="micholina">micholina</option>
-                    <option value="renaldo">Renaldo Martino</option>
-                </datalist>
-            </form> -->
     </header>
     <main id="main-content-container">
-     <!-- THIS SECTION WILL BE WHEN SOMEONE SEARCH FOR SOMETHNG , IT WILL SHOW 
+        <!-- THIS SECTION WILL BE WHEN SOMEONE SEARCH FOR SOMETHNG , IT WILL SHOW 
         THE INFORMATION OF THE PERSON REQUESTED. BECAUSE THERE WILL BE RANDOM
         SECTION WITH ARTIST , OF THE MOMENT, PERSON OF THE MOMENT IT SHOULD BE
         RELATED TO MUSIC. AND ALSO A MUSIC/ARTIST/ALBUM/ OF THE MOMENT ,
         LINK ON SHOW OF THE MOMENT
         -->
-       <!--  <section class="main-main">
+        <!--  <section class="main-main">
 
             <header class="artist-resume">
                 <figure>
@@ -206,105 +174,107 @@
                 </div>
             </aside> -->
 
-            <!--I want to put a section, where people can go to see  -->
+        <!--I want to put a section, where people can go to see  -->
 
-            <ul class="collection with-header">
-                <li class="collection-header">
-                    <h3>atis moman an</h3>
-                </li>
-                <li class="collection-item avatar">
-                    <img src="img/gallery/alan_cave.jpg" alt="alan cave" class="circle">
-                    <span class="title">bouch</span>
-                    <p>
-                        timeless <br>
-                        2016
-                    </p>
-                    <a href="#!" class="secondary-content">
-                        <i class="material-icons">grade</i>
-                    </a>
-                </li>
-                <li class="collection-item avatar">
-                    <img src="img/gallery/nickenson.jpeg" alt="alan cave" class="circle">
-                    <span class="title">bouch</span>
-                    <p>
-                        timeless <br>
-                        2016
-                    </p>
-                    <a href="#!" class="secondary-content">
-                        <i class="material-icons">grade</i>
-                    </a>
-                </li>
-                <li class="collection-item avatar">
-                    <img src="img/gallery/arly.jpg" alt="alan cave" class="circle">
-                    <span class="title">Loving you</span>
-                    <p>
-                        encyclopedie <br>
-                        2016
-                    </p>
-                    <a href="#!" class="secondary-content">
-                        <i class="material-icons">grade</i>
-                    </a>
-                </li>
+        <ul class="collection with-header">
+            <li class="collection-header">
+                <h3>atis moman an</h3>
+            </li>
+            <li class="collection-item avatar">
+                <img src="img/gallery/alan_cave.jpg" alt="alan cave" class="circle">
+                <span class="title">bouch</span>
+                <p>
+                    timeless <br>
+                    2016
+                </p>
+                <a href="#!" class="secondary-content">
+                    <i class="material-icons">grade</i>
+                </a>
+            </li>
+            <li class="collection-item avatar">
+                <img src="img/gallery/nickenson.jpeg" alt="alan cave" class="circle">
+                <span class="title">bouch</span>
+                <p>
+                    timeless <br>
+                    2016
+                </p>
+                <a href="#!" class="secondary-content">
+                    <i class="material-icons">grade</i>
+                </a>
+            </li>
+            <li class="collection-item avatar">
+                <img src="img/gallery/arly.jpg" alt="alan cave" class="circle">
+                <span class="title">Loving you</span>
+                <p>
+                    encyclopedie <br>
+                    2016
+                </p>
+                <a href="#!" class="secondary-content">
+                    <i class="material-icons">grade</i>
+                </a>
+            </li>
+        </ul>
+        <aside class="side-menu side-bar">
+            <ul>
+                <li><a href="">Keyboardist|Pianist</a></li>
+                <li><a href="">Guitarist</a></li>
+                <li><a href="">Batè</a></li>
+                <li><a href="">Instriman A Van</a></li>
+                <li><a href="">Old Band</a></li>
+                <li><a href="">Animatè</a></li>
+                <li><a href="">Female Singer</a></li>
+                <li><a href="">website reference</a></li>
+                <li><a href="">Animatè</a></li>
+                <li><a href="">Animatè</a></li>
+                <li><a href="">Animatè</a></li>
+                <li><a href="">Animatè</a></li>
+                <li><a href="" title="kek ti mizik damou 2000 konpa raga rap">Ti Mizik Alepòk</a></li>
+                <li><a href="">Atis Moman</a></li>
+                <li><a href="">Mizik Moman</a></li>
+                <li><a href="">Maestro yo</a></li>
+                <li><a href="">Yayad ak Gouyad</a></li>
             </ul>
-            <aside class="side-menu side-bar">
-                <ul>
-                    <li><a href="">Keyboardist|Pianist</a></li>
-                    <li><a href="">Guitarist</a></li>
-                    <li><a href="">Batè</a></li>
-                    <li><a href="">Instriman A Van</a></li>
-                    <li><a href="">Old Band</a></li>
-                    <li><a href="">Animatè</a></li>
-                    <li><a href="">Female Singer</a></li>
-                    <li><a href="">website reference</a></li>
-                    <li><a href="">Animatè</a></li>
-                    <li><a href="">Animatè</a></li>
-                    <li><a href="">Animatè</a></li>
-                    <li><a href="">Animatè</a></li>
-                    <li><a href="" title="kek ti mizik damou 2000 konpa raga rap">Ti Mizik Alepòk</a></li>
-                    <li><a href="">Atis Moman</a></li>
-                    <li><a href="">Mizik Moman</a></li>
-                    <li><a href="">Maestro yo</a></li>
-                    <li><a href="">Yayad ak Gouyad</a></li>
-                </ul>
-            </aside>
-            <ul class="collection with-header">
-                <li class="collection-header"><h4>related artist</h4> </li>
-                <li class="collection-item avatar">
-                    <img src="img/gallery/alan_cave.jpg" alt="alan cave" class="circle">
-                    <span class="title">bouch</span>
-                    <p>
-                        timeless <br>
-                        2016
-                    </p>
-                    <a href="#!" class="secondary-content">
-                        <i class="material-icons">grade</i>
-                    </a>
-                </li>
-                <li class="collection-item avatar">
-                    <img src="img/gallery/nickenson.jpeg" alt="alan cave" class="circle">
-                    <span class="title">bouch</span>
-                    <p>
-                        timeless <br>
-                        2016
-                    </p>
-                    <a href="#!" class="secondary-content">
-                        <i class="material-icons">grade</i>
-                    </a>
-                </li>
-                <li class="collection-item avatar">
-                    <img src="img/gallery/arly.jpg" alt="alan cave" class="circle">
-                    <span class="title">Loving you</span>
-                    <p>
-                        encyclopedie <br>
-                        2016
-                    </p>
-                    <a href="#!" class="secondary-content">
-                        <i class="material-icons">grade</i>
-                    </a>
-                </li>
+        </aside>
+        <ul class="collection with-header">
+            <li class="collection-header">
+                <h4>related artist</h4>
+            </li>
+            <li class="collection-item avatar">
+                <img src="img/gallery/alan_cave.jpg" alt="alan cave" class="circle">
+                <span class="title">bouch</span>
+                <p>
+                    timeless <br>
+                    2016
+                </p>
+                <a href="#!" class="secondary-content">
+                    <i class="material-icons">grade</i>
+                </a>
+            </li>
+            <li class="collection-item avatar">
+                <img src="img/gallery/nickenson.jpeg" alt="alan cave" class="circle">
+                <span class="title">bouch</span>
+                <p>
+                    timeless <br>
+                    2016
+                </p>
+                <a href="#!" class="secondary-content">
+                    <i class="material-icons">grade</i>
+                </a>
+            </li>
+            <li class="collection-item avatar">
+                <img src="img/gallery/arly.jpg" alt="alan cave" class="circle">
+                <span class="title">Loving you</span>
+                <p>
+                    encyclopedie <br>
+                    2016
+                </p>
+                <a href="#!" class="secondary-content">
+                    <i class="material-icons">grade</i>
+                </a>
+            </li>
 
-            </ul>
-    </section>
+        </ul>
+        </section>
     </main>
     <footer class="page-footer black">
         <div class="footer-link">
